k8s/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrip-backend
  namespace: scrip-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scrip-backend
  template:
    metadata:
      labels:
        app: scrip-backend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: backend
          image: ghcr.io/shadinmd/scrip-backend:c8e5e8c3859b97e19dc0262c33f8a2c591820128
          ports:
            - containerPort: 8000
