k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: scrip-dev
spec:
  selector:
    app: scrip-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
